tests/core/data/csl/TypeLoaderTests/SyntaxError/struct2.csl
struct 1struct2
{
	attribute string name;
};
